[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safepay_python"
version = "0.0.6"
authors = [
  { name="Fatima Aurangzeb", email="faurangzeb@getsafepay.com" },
]
description = "Safepay's python SDK for checkout integration"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests==2.27.1",
    "urllib3==1.26.14",
    "six==1.16.0",
]

[project.urls]
"Homepage" = "https://github.com/getsafepay/safepay-python"
"Bug Tracker" = "https://github.com/getsafepay/safepay-python/issues"